--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -40,10 +40,7 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
-  cookie_jar: ^3.0.1
-  requests: ^4.5.0
-  dio: ^4.0.6
-  dio_cookie_manager: ^2.0.0
+  html: ^0.15.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
