--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   html: ^0.15.0
+  page_transition: ^2.0.9
+  font_awesome_flutter: ^10.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,9 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/login_bg.png
+    - assets/images/Pink.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
